syntax = "proto3";

package mondoo.motor.transports.v1;
option go_package = "go.mondoo.io/mondoo/motor/transports";

enum TransportBackend {
  reserved 11;
  CONNECTION_LOCAL_OS = 0;
  CONNECTION_DOCKER_ENGINE_IMAGE = 1;
  CONNECTION_DOCKER_ENGINE_CONTAINER = 2;
  CONNECTION_SSH = 3;
  CONNECTION_WINRM = 4;
  CONNECTION_AWS_SSM_RUN_COMMAND = 5;
  CONNECTION_CONTAINER_REGISTRY = 6;
  CONNECTION_TAR = 7;
  CONNECTION_MOCK = 8;
  CONNECTION_VSPHERE = 9;
  CONNECTION_ARISTAEOS = 10;
  CONNECTION_AWS = 12;
  CONNECTION_GCP = 13;
  CONNECTION_AZURE = 14;
  CONNECTION_MS365 = 15;
  CONNECTION_IPMI = 16;
  CONNECTION_VSPHERE_VM = 17;
  CONNECTION_FS = 18;
  CONNECTION_K8S = 19;
  CONNECTION_EQUINIX_METAL = 20;
  CONNECTION_DOCKER = 21; // unspecified if this is a container or image
  CONNECTION_GITHUB = 22;
}

enum Kind {
  KIND_UNKNOWN = 0;

  // at rest
  KIND_VIRTUAL_MACHINE_IMAGE = 1;
  KIND_CONTAINER_IMAGE = 2;
  KIND_CODE = 3;
  KIND_PACKAGE = 4;

  // in motion
  KIND_VIRTUAL_MACHINE = 5;
  KIND_CONTAINER = 6;
  KIND_PROCESS = 7;
  KIND_API = 8;
  KIND_BARE_METAL = 9;
}

enum CredentialType {
  undefined = 0;
  password = 1;
  private_key = 2;
  ssh_agent = 3;
  bearer = 4;
  credentials_query = 5;
  json = 6;
}

// Credential holds authentication information
message Credential {
  string secret_id = 1;
  CredentialType type = 2;
  string user = 3;
  bytes secret = 4;

  // the following are optional and sugar for defining a secret
  // those values are only allowed for reading in yaml values but not via API calls
  string password = 21; // optional, could also be the password for the private key

  // for user convenience we define private_key, this allows yaml/json writers
  // to just embed the string representation, otherwise it would need to be base64 encoded
  string private_key = 22;

  // for user convenience we define private_key_path which loads a local file into the
  // secret
  string private_key_path = 23;
}

message TransportConfig {
  reserved 6, 7, 9, 10, 20;

  TransportBackend Backend = 1;
  string Host = 2;
  // Ports are not int by default, eg. docker://centos:latest parses a string as port
  // Therefore it is up to the transport to convert the port to what they need
  string Port = 3;
  string Path = 4;

  // credentials available for this transport configuration
  repeated Credential credentials = 11;

  bool Insecure = 8;  // disable ssl/tls checks
  Sudo Sudo = 21;
  bool Record = 22;

  map<string,string> options = 23;

  // flags for additional asset discovery
  Discovery discover = 27;

  // additional platform information, passed-through
  Kind kind = 24;
  string runtime = 25;

  // configuration to uniquly identify an specific asset for multi-asset api connection
  string platformid = 26;
}

message Sudo {
  bool active = 1;
  string user = 2;
  string shell = 3;
}

message Discovery {
    repeated string targets = 1;
    map<string,string> filter = 2;
}