syntax = "proto3";

package mondoo.vault;

option go_package = "vault";

message CredentialID {
  string key = 1;
}

message Credential {
  string key = 1;
  string label = 2;
  map<string, string> fields = 3;
}

message CredentialList {
  repeated Credential credentials = 1;
}

message CredentialDeletedResp {}

service Vault {
  rpc Get(CredentialID) returns (Credential);
  rpc Set(Credential)  returns (CredentialID);
  rpc Delete(CredentialID) returns (CredentialDeletedResp);
}
